--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -3,19 +3,31 @@ $fontFamily: 'Raleway',
 sans-serif;
 
 // Base Font and Color
-$baseFontSize: 18px;
+$baseFontSize: 16px;
 $baseColor: #ffffff;
 $baseLineHeight : 1.5;
 $headingLineHeight : 1.2;
 
 
 // Font Sizing
-$giganticFontSize: rem(48px);
-$hugeFontSize: rem(33px);
-$largeFontSize: rem(30px);
-$mediumFontSize: rem(25px);
-$smallFontSize: rem(16px);
-$miniFontSize: rem(14px);
+// Heading sizes - mobile
+// h4—h6 remain the same size on both mobile & desktop
+$h00-size-mobile: rem(40px);
+$h0-size-mobile: rem(32px);
+$h1-size-mobile: rem(26px);
+$h2-size-mobile: rem(22px);
+$h3-size-mobile: rem(18px);
+
+// Heading sizes - desktop
+$h00-size: rem(48px);
+$h0-size: rem(40px);
+$h1-size: rem(32px);
+$h2-size: rem(24px);
+$h3-size: rem(20px);
+$h4-size: rem(16px);
+$h5-size: rem(14px);
+$h6-size: rem(12px);
+
 
 
 // Colors
@@ -28,4 +40,4 @@ $grayDesc: #848282;
 
 // Buttons Styles
 $btnColor: $white;
-$btnSize: $smallFontSize;
+$btnSize: $h4-size;
