--- a/src/scss/components/__components-dir.scss
+++ b/src/scss/components/__components-dir.scss
@@ -4,3 +4,7 @@ Files inside this folder should contain all styles relating
 to a reusable component.
 */
 //Import Component files
+
+
+@import 'c-intro.scss';
+@import 'c-logo.scss';
