--- a/src/scss/components/_c-intro.scss
+++ b/src/scss/components/_c-intro.scss
@@ -18,12 +18,30 @@
             width: 80px;
             border: 2px solid white;
         }
-
     }
 
     &__subtitle {
         padding: 0 85px;
     }
 
+    &__arrow {
+        padding-top: 140px;
+        font-size: 22px;
+        animation: arrow 1s ease-in-out infinite;
+    }
 
+}
+
+@keyframes arrow {
+    0% {
+        transform: translateY(-10px);
+    }
+
+    50% {
+        transform: translateY(10px);
+    }
+
+    100% {
+        transform: translateY(-10px);
+    }
 }
