style basic menu

--- a/src/scss/components/__components-dir.scss
+++ b/src/scss/components/__components-dir.scss
@@ -6,5 +6,6 @@ to a reusable component.
 //Import Component files
 
 
-@import 'c-intro.scss';
-@import 'c-logo.scss';
+@import 'c-intro';
+@import 'c-logo';
+@import 'c-menu';
