fix style header section for intro img

--- a/src/scss/layouts/_l-header.scss
+++ b/src/scss/layouts/_l-header.scss
@@ -1,22 +1,25 @@
 .l-header {
-    background: url('../img/intro/pic_1.png');
-    background-size: cover;
-    background-position: center;
 
 
-    &::after {
-        @include position($top:0, $left:0);
-        @include size(100%);
-        background-color: rgba(0, 0, 0, 0.2);
-    }
+
+
 
 
 
     &__wrapper {
-        max-width: 1120px;
-        margin: 0 auto;
+        background: url('../img/intro/pic_1.png');
+        background-size: cover;
+        background-position: center;
+        // max-width: 1120px;
+        // margin: 0 auto;
         height: 100vh;
         @include flex(flex, center, center, column);
         z-index: 2;
+
+        &::after {
+            @include position($top:0, $left:0);
+            @include size(100%);
+            background-color: rgba(0, 0, 0, 0.2);
+        }
     }
 }
