--- a/src/scss/components/c-menu/_c-menu.scss
+++ b/src/scss/components/c-menu/_c-menu.scss
@@ -2,11 +2,13 @@
     height: 60px;
     width: 100%;
     border-bottom: 1px solid #ebebeb;
+    transition: .4s box-shadow linear;
 
     &--fixed {
         position: fixed;
         top: 0;
         background-color: $white;
+        box-shadow: 0px -5px 28px -1px rgba(0, 0, 0, 0.75);
     }
 
 
