set position gallery card. Use grid layout

--- a/src/scss/components/__components-dir.scss
+++ b/src/scss/components/__components-dir.scss
@@ -9,4 +9,5 @@ to a reusable component.
 @import 'c-intro';
 @import 'c-logo';
 @import 'c-menu/c-menu';
-@import 'c-header'
+@import 'c-header';
+@import 'c-card'
