--- a/src/scss/components/_c-card.scss
+++ b/src/scss/components/_c-card.scss
@@ -1,17 +1,18 @@
 .c-card {
 
-    width: 100%;
+    // width: 100%;
     // @include flex_center();
     // flex-wrap: wrap;
     display: grid;
     // grid-template-columns: 1fr;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: 370px;
+    grid-template-rows: repeat(3, 370px);
     grid-gap: 25px;
 
     &__box {
         position: relative;
-        @include size(auto);
+        @include size(100%);
+        @include flex_center();
 
         &:nth-child(1) {
             grid-column: 1/3;
@@ -45,16 +46,128 @@
 
         &::after {
             @include position($top:0, $left:0);
+            @include size(100%);
+            background-color: rgba(0, 0, 0, .3);
+            transition: .5s all ease-in-out;
 
         }
+
+        &:hover {
+
+            cursor: pointer;
+
+            &::after {
+
+                background-color: rgba(0, 0, 0, .8);
+
+            }
+
+            .c-card__title::before,
+            .c-card__description::before {
+                left: -50px;
+            }
+
+
+            .c-card__description::before,
+            .c-card__description::after {
+                bottom: -20px;
+            }
+
+            .c-card__description::after,
+            .c-card__title::after {
+                right: -50px;
+            }
+
+            .c-card__title::after,
+            .c-card__title::before {
+                top: -20px;
+            }
+        }
+
+    }
+
+    &__img {
+        @include size(100%);
+        background-size: cover;
+        object-fit: cover;
+
     }
 
 
 
     &__text {
-        @include position($top:0, $left:0);
+        @include pseudo();
         @include flex(flex, center, center, column);
-        @include size(100%);
+        z-index: 99;
+        color: #ffffff;
 
+        &::after {
+            @include pseudo();
+            border: 1px solid white;
+            width: 142px;
+            @include flex_center();
+
+        }
+
+
+    }
+
+    &__title {
+        font-size: rem(25px);
+        line-height: 42px;
+        font-weight: 400;
+        font-family: $playfair;
+        text-transform: uppercase;
+
+
+
+        &::before {
+            @include position($top:0, $left:-30px);
+            border-left: 2px solid white;
+            border-top: 2px solid white;
+            width: 22px;
+            height: 22px;
+            z-index: 99;
+            transition: .5s all ease-in-out;
+        }
+
+        &::after {
+            @include position($top:0, $right:-30px);
+            border-top: 2px solid white;
+            border-right: 2px solid white;
+            width: 22px;
+            height: 22px;
+            z-index: 99;
+            transition: .5s all ease-in-out;
+        }
+
+    }
+
+    &__description {
+        font-family: $raleway;
+        font-size: rem(16px);
+        line-height: 42px;
+        font-weight: 500;
+
+
+        &::before {
+            @include position($bottom:0, $left:-30px);
+            border-left: 2px solid white;
+            border-bottom: 2px solid white;
+            width: 20px;
+            height: 20px;
+            z-index: 99;
+            transition: .5s all ease-in-out;
+        }
+
+        &::after {
+            @include position($bottom:0, $right:-30px);
+            border-bottom: 2px solid white;
+            border-right: 2px solid white;
+            width: 20px;
+            height: 20px;
+            z-index: 99;
+            transition: .5s all ease-in-out;
+        }
     }
 }
