--- a/src/scss/components/_c-card.scss
+++ b/src/scss/components/_c-card.scss
@@ -8,6 +8,7 @@
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 370px);
     grid-gap: 25px;
+    margin-bottom: 60px;
 
     &__box {
         position: relative;
