--- a/src/scss/components/__components-dir.scss
+++ b/src/scss/components/__components-dir.scss
@@ -10,4 +10,5 @@ to a reusable component.
 @import 'c-logo';
 @import 'c-menu/c-menu';
 @import 'c-header';
-@import 'c-card'
+@import 'c-card';
+@import 'c-button'
