add slider section opinion

--- a/src/scss/components/__components-dir.scss
+++ b/src/scss/components/__components-dir.scss
@@ -11,4 +11,5 @@ to a reusable component.
 @import 'c-menu/c-menu';
 @import 'c-header';
 @import 'c-card';
-@import 'c-button'
+@import 'c-button';
+@import 'c-opinion/c-opinion';
