--- a/src/scss/layouts/_l-section.scss
+++ b/src/scss/layouts/_l-section.scss
@@ -2,4 +2,29 @@
 
     width: 100%;
 
+    &--contact {
+
+        height: 650px;
+        background: url('../img/contact/pic_1.png') center center/cover no-repeat fixed;
+        position: relative;
+
+        &::after {
+            @include position($top:0, $left:0);
+            background-color: #e9e9e9;
+            width: 100%;
+            height: 100%;
+            opacity: 0.85;
+        }
+
+        &>div {
+            padding-top: 40px;
+        }
+
+
+
+
+
+
+    }
+
 }
