--- a/src/scss/components/c-menu/_c-menu.scss
+++ b/src/scss/components/c-menu/_c-menu.scss
@@ -18,6 +18,7 @@
         margin: 0 auto;
         @include flex(flex, center, space-between);
         height: 100%;
+        position: relative;
     }
 
     &__logo {
@@ -29,12 +30,29 @@
     }
 
     &__list {
-        width: 450px;
-        @include flex(flex, center, space-between);
+        // width: 450px;
+        // @include flex(flex, center, space-between);
+
+
+
+        display: none;
+        list-style: none;
+        background-color: white;
+        z-index: 99;
+        margin: 0;
+        padding: 0;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        width: 100%;
+        text-align: right;
+
     }
 
     &__item {
-        position: relative;
+        // position: relative;
+        padding: 15px;
+        @include flex_center();
         color: #696969;
         font-family: Raleway;
         font-size: 13px;
@@ -42,22 +60,74 @@
         text-transform: uppercase;
         cursor: pointer;
 
-        &::before {
-            content: '';
-            position: absolute;
-            bottom: -4px;
-            left: 0;
-            right: 0;
-            height: 2px;
-            background-color: #d07c7c;
-            transform-origin: bottom right;
-            transform: scaleX(0);
-            transition: transform 0.5s ease;
+        // &::before {
+        //     content: '';
+        //     position: absolute;
+        //     bottom: -4px;
+        //     left: 0;
+        //     right: 0;
+        //     height: 2px;
+        //     background-color: #d07c7c;
+        //     transform-origin: bottom right;
+        //     transform: scaleX(0);
+        //     transition: transform 0.5s ease;
+        // }
+
+        // &:hover::before {
+        //     transform-origin: bottom left;
+        //     transform: scaleX(1);
+        // }
+    }
+
+    &__hamburger {
+
+        position: relative;
+        @include size(55px, 40px);
+        transform: rotate(0deg);
+        transition: .5s ease-in-out;
+        cursor: pointer;
+
+        &--open {
+
+            span:nth-child(1) {
+                top: calc(40px/2 - 5px/2);
+                transform: rotate(135deg);
+            }
+
+            span:nth-child(2) {
+                opacity: 0;
+                left: -60px;
+            }
+
+            span:nth-child(3) {
+                top: calc(40px/2 - 5px/2);
+                transform: rotate(-135deg);
+            }
         }
 
-        &:hover::before {
-            transform-origin: bottom left;
-            transform: scaleX(1);
+        &--box {
+
+            @include position($left:0);
+            @include size(100%, 5px);
+            background: gray;
+            border-radius: 9px;
+            opacity: 1;
+            transform: rotate(0deg);
+            transition: .25s ease-in-out;
+
+
+            &:nth-child(1) {
+                top: 0;
+            }
+
+            &:nth-child(2) {
+                top: calc(40px/2 - 5px/2);
+            }
+
+            &:nth-child(3) {
+                top: calc(40px - 5px);
+            }
         }
     }
+
 }
