--- a/src/scss/components/c-menu/_c-menu.scss
+++ b/src/scss/components/c-menu/_c-menu.scss
@@ -1,9 +1,9 @@
 .c-menu {
-    height: 60px;
+    height: 70px;
     width: 100%;
     border-bottom: 1px solid #ebebeb;
     transition: .4s box-shadow linear;
-    z-index: 99;
+    z-index: 100;
 
     &--fixed {
         position: fixed;
@@ -16,6 +16,7 @@
     &__wrapper {
         max-width: 1230px;
         margin: 0 auto;
+        padding: 10px 25px;
         @include flex(flex, center, space-between);
         height: 100%;
         position: relative;
@@ -35,23 +36,31 @@
 
 
 
-        display: none;
+        @include position($display: none, $top:70px, $left:0);
         list-style: none;
         background-color: white;
         z-index: 99;
         margin: 0;
         padding: 0;
-        position: absolute;
-        top: 60px;
-        left: 0;
         width: 100%;
         text-align: right;
+
+        transition: .4s box-shadow linear;
+
+
+        &--open {
+            // @include position($bottom:0);
+            // border-bottom: 1px solid #ebebeb;
+            box-shadow: 0px 14px 28px -1px rgba(0, 0, 0, 0.75);
+
+        }
+
 
     }
 
     &__item {
         // position: relative;
-        padding: 15px;
+        // padding: 15px;
         @include flex_center();
         color: #696969;
         font-family: Raleway;
@@ -59,6 +68,58 @@
         font-weight: 500;
         text-transform: uppercase;
         cursor: pointer;
+        transition: .5s ease-in-out;
+        position: relative;
+
+
+        // &::after {
+        //     @include position($top:0, $left:250px);
+        //     border-right: 1px solid red;
+        //     height: 75%;
+        // }
+
+        // &::before {
+        //     @include position($top:0, $right:250px);
+        //     border-left: 1px solid red;
+        //     height: 75%;
+        // }
+
+
+        // &:hover {
+        //     color: #d07c7c;
+        //     border-bottom: 1px solid #d07c7c;
+        //     border-top: 1px solid #d07c7c;
+
+        // }
+
+        &:hover {
+            background-color: #f9e8e8;
+        }
+
+
+        &:hover .c-menu__link::before {
+            transform: translate(-50%, 0) scaleX(1);
+        }
+    }
+
+    &__link {
+        padding: 15px;
+        position: relative;
+
+        &::before {
+            content: '';
+            position: absolute;
+            left: 50%;
+            bottom: 10px;
+            width: 100%;
+            height: 2px;
+            background-color: #fc2f70;
+            transform-origin: center;
+            transform: translate(-50%, 0) scaleX(0);
+            transition: transform 0.3s ease-in-out;
+        }
+
+
 
         // &::before {
         //     content: '';
@@ -90,18 +151,22 @@
         &--open {
 
             span:nth-child(1) {
-                top: calc(40px/2 - 5px/2);
-                transform: rotate(135deg);
+
+                transform: rotate(45deg);
+                top: -2px;
+                left: 8px;
             }
 
             span:nth-child(2) {
+                width: 0%;
                 opacity: 0;
-                left: -60px;
             }
 
             span:nth-child(3) {
-                top: calc(40px/2 - 5px/2);
-                transform: rotate(-135deg);
+
+                transform: rotate(-45deg);
+                left: 8px;
+                top: 37px;
             }
         }
 
@@ -117,15 +182,20 @@
 
 
             &:nth-child(1) {
-                top: 0;
+
+                top: 0px;
+                transform-origin: left center;
             }
 
             &:nth-child(2) {
-                top: calc(40px/2 - 5px/2);
+                top: calc(35px/2 - 5px/2);
+                transform-origin: left center;
             }
 
             &:nth-child(3) {
-                top: calc(40px - 5px);
+                top: calc(35px - 5px);
+                // top: 36px;
+                transform-origin: left center;
             }
         }
     }
