Style media queries for nav menu

--- a/src/scss/layouts/_media-queries.scss
+++ b/src/scss/layouts/_media-queries.scss
@@ -2,20 +2,18 @@
 @media only screen and (min-width: 460px) {}
 
 // Small screen > 640px
-@media only screen and (min-width: 640px) {
-}
+@media only screen and (min-width: 640px) {}
 
 // Medium screen > 768px
 @media only screen and (min-width: 768px) {
+    @include c-menu\@screen_medium;
 
 }
 
 
 // Wide screen > 1024px
-@media only screen and (min-width: 1024px) {
-}
+@media only screen and (min-width: 1024px) {}
 
 
 // Mega screen > 1280px
-@media only screen and (min-width: 1280px) {
-}
+@media only screen and (min-width: 1280px) {}
