--- a/src/scss/components/c-menu/_c-menu.scss
+++ b/src/scss/components/c-menu/_c-menu.scss
@@ -31,10 +31,6 @@
     }
 
     &__list {
-        // width: 450px;
-        // @include flex(flex, center, space-between);
-
-
 
         @include position($display: none, $top:70px, $left:0);
         list-style: none;
@@ -44,15 +40,11 @@
         padding: 0;
         width: 100%;
         text-align: right;
-
         transition: .4s box-shadow linear;
 
 
         &--open {
-            // @include position($bottom:0);
-            // border-bottom: 1px solid #ebebeb;
             box-shadow: 0px 14px 28px -1px rgba(0, 0, 0, 0.75);
-
         }
 
 
@@ -70,27 +62,6 @@
         cursor: pointer;
         transition: .5s ease-in-out;
         position: relative;
-
-
-        // &::after {
-        //     @include position($top:0, $left:250px);
-        //     border-right: 1px solid red;
-        //     height: 75%;
-        // }
-
-        // &::before {
-        //     @include position($top:0, $right:250px);
-        //     border-left: 1px solid red;
-        //     height: 75%;
-        // }
-
-
-        // &:hover {
-        //     color: #d07c7c;
-        //     border-bottom: 1px solid #d07c7c;
-        //     border-top: 1px solid #d07c7c;
-
-        // }
 
         &:hover {
             background-color: #f9e8e8;
@@ -121,26 +92,6 @@
             transform: translate(-50%, 0) scaleX(0);
             transition: transform 0.3s ease-in-out;
         }
-
-
-
-        // &::before {
-        //     content: '';
-        //     position: absolute;
-        //     bottom: -4px;
-        //     left: 0;
-        //     right: 0;
-        //     height: 2px;
-        //     background-color: #d07c7c;
-        //     transform-origin: bottom right;
-        //     transform: scaleX(0);
-        //     transition: transform 0.5s ease;
-        // }
-
-        // &:hover::before {
-        //     transform-origin: bottom left;
-        //     transform: scaleX(1);
-        // }
     }
 
     &__hamburger {
@@ -203,4 +154,34 @@
         }
     }
 
+}
+
+// media queries
+//screen > 768px
+
+@mixin c-menu\@screen_medium {
+    .c-menu {
+
+        &__list {
+            width: 480px;
+            @include flex(flex !important, center, space-between);
+            position: relative;
+            top: 0;
+
+            &--open {
+                box-shadow: none;
+            }
+        }
+
+        &__hamburger {
+            display: none;
+        }
+
+        &__link {
+
+            &::before {
+                width: 50%;
+            }
+        }
+    }
 }
