--- a/src/scss/components/_c-card.scss
+++ b/src/scss/components/_c-card.scss
@@ -1,12 +1,16 @@
 .c-card {
 
+    grid-template-columns: 1fr;
+    grid-auto-rows: 300px;
     // width: 100%;
     // @include flex_center();
     // flex-wrap: wrap;
     display: grid;
     // grid-template-columns: 1fr;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 370px);
+    //***
+    // grid-template-columns: repeat(3, 1fr);
+    // grid-template-rows: repeat(3, 370px);
+    //***
     grid-gap: 25px;
     margin-bottom: 60px;
 
@@ -15,34 +19,7 @@
         @include size(100%);
         @include flex_center();
 
-        &:nth-child(1) {
-            grid-column: 1/3;
-        }
 
-        &:nth-child(2) {
-            grid-column: 3;
-            grid-row: 1/3;
-        }
-
-        &:nth-child(3) {
-            grid-column: 1;
-            grid-row: 2;
-        }
-
-        &:nth-child(4) {
-            grid-column: 2;
-            grid-row: 2;
-        }
-
-        &:nth-child(5) {
-            grid-column: 1/3;
-            grid-row: 3;
-        }
-
-        &:nth-child(6) {
-            grid-column: 3;
-            grid-row: 3;
-        }
 
 
         &::after {
@@ -171,4 +148,47 @@
             transition: .5s all ease-in-out;
         }
     }
+}
+
+// media queries 
+// screen > 1024px
+
+@mixin c-card\@screen_wide {
+
+    .c-card {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 370px);
+
+        &__box {
+            &:nth-child(1) {
+                grid-column: 1/3;
+            }
+
+            &:nth-child(2) {
+                grid-column: 3;
+                grid-row: 1/3;
+            }
+
+            &:nth-child(3) {
+                grid-column: 1;
+                grid-row: 2;
+            }
+
+            &:nth-child(4) {
+                grid-column: 2;
+                grid-row: 2;
+            }
+
+            &:nth-child(5) {
+                grid-column: 1/3;
+                grid-row: 3;
+            }
+
+            &:nth-child(6) {
+                grid-column: 3;
+                grid-row: 3;
+            }
+        }
+    }
+
 }
