--- a/src/scss/components/_c-card.scss
+++ b/src/scss/components/_c-card.scss
@@ -151,6 +151,49 @@
 }
 
 // media queries 
+//screen > 768px
+
+@mixin c-card\@screen_medium {
+
+    .c-card {
+        grid-template-columns: repeat(2, 1fr);
+
+        &__box {
+            &:nth-child(1) {
+                grid-column: 1/3;
+            }
+
+            &:nth-child(2) {
+                grid-column: 1;
+                grid-row: 2/5;
+            }
+
+            &:nth-child(3) {
+                grid-column: 2;
+                grid-row: 2;
+            }
+
+            &:nth-child(4) {
+                grid-column: 2;
+                grid-row: 3;
+            }
+
+            &:nth-child(5) {
+                grid-column: 1/3;
+                grid-row: 5;
+            }
+
+            &:nth-child(6) {
+
+                grid-column: 2;
+                grid-row: 4;
+            }
+        }
+    }
+}
+
+
+
 // screen > 1024px
 
 @mixin c-card\@screen_wide {
@@ -190,5 +233,4 @@
             }
         }
     }
-
 }
