fix style for opinion section

--- a/src/scss/components/c-opinion/_c-opinion.scss
+++ b/src/scss/components/c-opinion/_c-opinion.scss
@@ -4,8 +4,7 @@
 .c-opinion {
 
     @include flex(flex, center, space-between, column);
-
-    height: 80px;
+    height: 100px;
 
     &__quote {
         color: #848282;
@@ -13,6 +12,7 @@
         font-size: 18px;
         font-weight: 300;
         line-height: 25px;
+        text-align: center;
     }
 
     &__author {
