add scroll arrow for intro section

--- a/src/scss/components/__components-dir.scss
+++ b/src/scss/components/__components-dir.scss
@@ -6,7 +6,7 @@ to a reusable component.
 //Import Component files
 
 
-@import 'c-intro';
+@import 'c-intro/c-intro';
 @import 'c-logo';
 @import 'c-menu/c-menu';
 @import 'c-header';
