add go-back arrow

--- a/src/scss/components/__components-dir.scss
+++ b/src/scss/components/__components-dir.scss
@@ -7,7 +7,7 @@ to a reusable component.
 
 
 @import 'c-intro/c-intro';
-@import 'c-logo';
+@import 'c-logo/c-logo';
 @import 'c-menu/c-menu';
 @import 'c-header';
 @import 'c-card';
