add popup image

--- a/src/scss/components/__components-dir.scss
+++ b/src/scss/components/__components-dir.scss
@@ -10,7 +10,7 @@ to a reusable component.
 @import 'c-logo/c-logo';
 @import 'c-menu/c-menu';
 @import 'c-header';
-@import 'c-card';
+@import 'c-card/c-card';
 @import 'c-button';
 @import 'c-opinion/c-opinion';
 @import 'c-socials';
