--- a/src/scss/components/c-card/_c-card.scss
+++ b/src/scss/components/c-card/_c-card.scss
@@ -2,15 +2,7 @@
 
     grid-template-columns: 1fr;
     grid-auto-rows: 300px;
-    // width: 100%;
-    // @include flex_center();
-    // flex-wrap: wrap;
     display: grid;
-    // grid-template-columns: 1fr;
-    //***
-    // grid-template-columns: repeat(3, 1fr);
-    // grid-template-rows: repeat(3, 370px);
-    //***
     grid-gap: 25px;
     margin-bottom: 60px;
 
@@ -19,15 +11,11 @@
         @include size(100%);
         @include flex_center();
 
-
-
-
         &::after {
             @include position($top:0, $left:0);
             @include size(100%);
             background-color: rgba(0, 0, 0, .3);
             transition: .5s all ease-in-out;
-
         }
 
         &:hover {
@@ -87,7 +75,6 @@
 
         }
 
-
     }
 
     &__title {
@@ -96,7 +83,6 @@
         font-weight: 400;
         font-family: $playfair;
         text-transform: uppercase;
-
 
 
         &::before {
@@ -111,10 +97,9 @@
 
         &::after {
             @include position($top:0, $right:-30px);
+            @include size(22px);
             border-top: 2px solid white;
             border-right: 2px solid white;
-            width: 22px;
-            height: 22px;
             z-index: 99;
             transition: .5s all ease-in-out;
         }
@@ -130,20 +115,18 @@
 
         &::before {
             @include position($bottom:0, $left:-30px);
+            @include size(20px);
             border-left: 2px solid white;
             border-bottom: 2px solid white;
-            width: 20px;
-            height: 20px;
             z-index: 99;
             transition: .5s all ease-in-out;
         }
 
         &::after {
             @include position($bottom:0, $right:-30px);
+            @include size(20px);
             border-bottom: 2px solid white;
             border-right: 2px solid white;
-            width: 20px;
-            height: 20px;
             z-index: 99;
             transition: .5s all ease-in-out;
         }
@@ -179,14 +162,12 @@
         color: #000;
         background: rgba(255, 255, 255, 0.8);
         padding: 18px;
-        font-size: 26px;
+        font-size: rem(26px);
         border-radius: 50%;
         font-weight: bold;
         cursor: pointer;
 
     }
-
-
 }
 
 
