--- a/src/scss/components/_c-button.scss
+++ b/src/scss/components/_c-button.scss
@@ -3,8 +3,8 @@
     background-color: #d07c7c;
     border: none;
     color: #ffffff;
-    font-family: Raleway;
-    font-size: 16px;
+    font-family: $raleway;
+    font-size: rem(16px);
     font-weight: 500;
     line-height: 12px;
     text-transform: uppercase;
