--- a/src/scss/layouts/_l-section.scss
+++ b/src/scss/layouts/_l-section.scss
@@ -10,9 +10,8 @@
 
         &::after {
             @include position($top:0, $left:0);
+            @include size(100%);
             background-color: #e9e9e9;
-            width: 100%;
-            height: 100%;
             opacity: 0.85;
         }
 
